记录不存在异常处理

--- a/luban-core/luban-dto/src/main/resources/i18n/base.properties
+++ b/luban-core/luban-dto/src/main/resources/i18n/base.properties
@@ -2,7 +2,7 @@ error.0=请求成功
 error.400=请求参数错误
 error.401=认证失败，可能原因：1.用户或密码错误；2.token已过期。
 error.403=无权限访问
-error.404=资源不存在
+error.404=记录不存在
 error.500=服务器繁忙，请稍候再试
 error.600=用户未登录
 
